# pewstats-collectors

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  RANKED_STATS_IMPLEMENTATION.md  RANKED_STATS_RATE_LIMIT_ANALYSIS.md  RANKED_STATS_UPDATE.md  README.md  STATS_AGGREGATION_IMPLEMENTATION.md  TOURNAMENT_LEADERBOARD.md  claude.md  compose.yaml  create_dumbbell_plot.py  generate_leaderboard.py  generate_matches_chart.py  populate_tournament_data.py  pyproject.toml  requirements.txt  run_backfill.sh  run_ranked_stats_once.sh  test_auto_population.py  test_division_2_discovery.py  test_ranked_collector.py  tournament_relationships.json  troublemakers_ii.json
.claude/: claude.md
docs/: API.md  API_KEY_SPLIT_GUIDE.md  ARCHITECTURE.md  AUTO_POPULATION_GUIDE.md  DOCUMENTATION_INDEX.md  FALL_2025_SCHEDULE.md  FIGHT_TRACKING_COMPLETE.md  KOMODO_DEPLOYMENT_GUIDE.md  MIGRATION_003_TOURNAMENTS.md  PARALLEL_PROCESSING_DEPLOYMENT.md  RANKED_STATS_COLLECTOR.md  REQUIREMENTS.md  STATS_AGGREGATION_DEPLOYMENT.md  TOURNAMENT_DEPLOYMENT.md  TOURNAMENT_IMPROVEMENTS.md  TOURNAMENT_QUICKSTART.md  TOURNAMENT_STATS_ARCHITECTURE.md  TOURNAMENT_STATUS.md  TOURNAMENT_SYSTEM.md  WEAPON_CATEGORIES.md  damage_events_filtering.md  database-manager-comparison.md  database-schemas.md  fall_2025_schedule.sql  finishing-metrics-README.md  finishing-metrics-analysis.md  finishing-metrics-api.md  finishing-metrics-implementation.md  finishing-metrics-migration.sql  finishing-metrics-schema.md  finishing-metrics-strategy.md  match-discovery-comparison.md  match-summary-worker-comparison.md  (+15 more)
(+90 files in other folders)
